# webgpu_demo

./: .gitignore  Cargo.toml  README.md  build.sh
src/: compute.wgsl  gpu.rs  lib.rs  main.rs  params.rs  pipeline.rs  render.wgsl  state.rs  texture.rs
web/: index.html
