[package]
name = "webgpu_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# native 可执行文件入口，通过 `cargo run` 启动桌面窗口
[[bin]]
name = "webgpu_demo"
path = "src/main.rs"

[dependencies]
wgpu = { version = "29", default-features = false, features = ["wgsl"] }
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# ─── Native 桌面平台依赖 ───
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 为 native 启用系统 GPU 后端: Linux=Vulkan, macOS=Metal, Windows=DX12
wgpu = { version = "29", default-features = false, features = ["vulkan", "metal", "dx12", "wgsl"] }
pollster = "0.4"
env_logger = "0.11"
winit = "0.30"

# ─── WASM 浏览器平台依赖 ───
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "29", default-features = false, features = ["webgpu", "wgsl"] }
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "Gpu",
    "Navigator",
] }
